--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -129,8 +129,7 @@
 %e - day of month, space padded; same as %_d
 %F - full date; like %+4Y-%m-%d
 %g - last two digits of year of ISO week number (see %G)
-%G - year of ISO week number (see %V); normally useful only
-with %V
+%G - year of ISO week number (see %V); normally useful only with %V
 %h - same as %b
 %H - hour (00..23)
 %I - hour (01..12)
@@ -151,12 +150,10 @@ with %V
 %t - a tab
 %T - time; same as %H:%M:%S
 %u - day of week (1..7); 1 is Monday
-%U - week number of year, with Sunday as first day of week
-(00..53)
+%U - week number of year, with Sunday as first day of week(00..53)
 %V - ISO week number, with Monday as first day of week (01..53)
 %w - day of week (0..6); 0 is Sunday
-%W - week number of year, with Monday as first day of week
-(00..53)
+%W - week number of year, with Monday as first day of week(00..53)
 %x - locale's date representation (e.g., 12/31/99)
 %X - locale's time representation (e.g., 23:13:48)
 %y - last two digits of year (00..99)
@@ -168,4 +165,6 @@ with %V
 -04, +05:30)
 %Z - alphabetic time zone abbreviation (e.g., EDT)
 "]]></string>
+    <string name="widgetConverter_fromV2_title">WARNING</string>
+    <string name="widgetConverter_fromV2_message">This widget was created in an older version of the application, perhaps when updating the widget itself disappeared from the main screen of the phone, so it is recommended to create a new widget, load the data of the current one into it, and delete the current one.</string>
 </resources>
