--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -103,4 +103,5 @@
 %Z - Аббревиатура временной зоны]]></string>
     <string name="widgetConverter_fromV2_title">Внимание</string>
     <string name="widgetConverter_fromV2_message">Этот виджет был создан в более старой версии приложения, возможно при обновлении сам виджет пропал с главного экрана телефона, поэтому рекомендуется создать новый виджет, загрузить в него данные текущего, и удалить текущий.</string>
+    <string name="updateChecker_text_NO_NETWORK_CONNECTION">Нет соеденения с интернетом!</string>
 </resources>
