--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -50,7 +50,7 @@
     <string name="debug_title_services">Сервисы</string>
     <string name="debug_button_updateChecker_thisVersion">Текущая версия</string>
     <string name="activityTitle_logger">OpenWidgets - Логгирование</string>
-    <string name="CHANCEL">Отмена</string>
+    <string name="CANCEL">Отмена</string>
     <string name="updateChecker_button_changeLog">Изменения</string>
     <string name="updateChecker_text_ERROR">Ошибка проверки обновления:\n * Код: %ERROR_CODE%\n * Сообщение: %ERROR_MESSAGE%</string>
     <string name="updateChecker_text_VERSION_NOT_RELEASE">Ваша версия приложения не найдена на сервере, рекомендуем скачать последнюю.</string>
@@ -105,7 +105,15 @@
     <string name="widgetConverter_fromV2_message">Этот виджет был создан в более старой версии приложения, возможно при обновлении сам виджет пропал с главного экрана телефона, поэтому рекомендуется создать новый виджет, загрузить в него данные текущего, и удалить текущий.</string>
     <string name="updateChecker_text_NO_NETWORK_CONNECTION">Нет соеденения с интернетом!</string>
     <string name="ERROR">Ошибка</string>
-    <string name="ERROR_SEND_TO_DEVELOPERS">Напишите разработчикам</string>
+    <string name="ERROR_SEND_TO_DEVELOPERS">Напишите этот текст разработчикам!</string>
     <string name="settings_checkBox_isStopWidgetsUpdaterAfterScreenOff">Выключить виджеты при отключеии экрана</string>
     <string name="settings_checkBox_isStartWidgetsUpdaterAfterScreenOn">Включить виджеты при включении экрана</string>
+    <string name="SECCUses">Успешно</string>
+    <string name="settings_logger_clear_title">Отчистить Логи</string>
+    <string name="settings_logger_clear_message">Вы точно хотите отчистить логи? Рекомендуем сначала загрузить логи на сервер, так вы очень нам поможете. Загрузить логи можно кнопкой справа от этой.</string>
+    <string name="settings_logger_upload_title">Загрузить на сервер</string>
+    <string name="settings_logger_upload_message">Вы точно хотите загрузить отладочные логи на сервер? Они не содержат конфидициальной информации.</string>
+    <string name="settings_logger_share_title">Поделится логами</string>
+    <string name="settings_logger_clearing_request_title">Запрос на удаление логов</string>
+    <string name="settings_logger_clearing_request_message">С сервера пришёл запрос на удаление логов, очень рекомендуем согласится, разработчику виднее что лучьше.</string>
 </resources>
