--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
 
     <string name="OK">OK</string>
     <string name="APPLY">Apply</string>
-    <string name="CHANCEL">Chancel</string>
+    <string name="CANCEL">Cancel</string>
 
     <string name="activityTitle_about">OpenWidgets - About</string>
     <string name="activityTitle_main">OpenWidgets - Home</string>
@@ -177,7 +177,7 @@
     <string name="settings_logger_upload_title">3</string>
     <string name="settings_logger_upload_message">4</string>
     <string name="settings_logger_share_title">5</string>
-    <string name="SECCU">Seccusesfullu</string>
+    <string name="SECCUses">Successful</string>
     <string name="settings_logger_clearing_request_title">Logs clearing request</string>
     <string name="settings_logger_clearing_request_message">6</string>
 </resources>
