--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -112,7 +112,7 @@
     <string name="settings_logger_clear_title">Отчистить Логи</string>
     <string name="settings_logger_clear_message">Вы точно хотите отчистить логи? Рекомендуем сначала загрузить логи на сервер, так вы очень нам поможете. Загрузить логи можно кнопкой справа от этой.</string>
     <string name="settings_logger_upload_title">Загрузить на сервер</string>
-    <string name="settings_logger_upload_message">Вы точно хотите загрузить отладочные логи на сервер? Они не содержат конфидициальной информации.</string>
+    <string name="settings_logger_upload_message">Вы точно хотите загрузить отладочные логи на сервер? Они не содержат конфидициальной информации.\n\nВаш instanceId=%INSTANCE_ID%</string>
     <string name="settings_logger_share_title">Поделится логами</string>
     <string name="settings_logger_clearing_request_title">Запрос на удаление логов</string>
     <string name="settings_logger_clearing_request_message">С сервера пришёл запрос на удаление логов, очень рекомендуем согласится, разработчику виднее что лучьше.</string>
