new Logger! Code polished! & Cleanup ErrorDetectorWrapper is Deprecated move Logger to FazziCLAYLibs.jar use Thread which Handler Added error check to app starting Fix TimeUtils bug for static variable added Utils.takeScreenshot fix WidgetsData converted bug (файл не открывается заного после конвертирования, а конвертирования работает именно с файлом!)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -180,4 +180,5 @@
     <string name="SECCUses">Successful</string>
     <string name="settings_logger_clearing_request_title">Logs clearing request</string>
     <string name="settings_logger_clearing_request_message">6</string>
+    <string name="ERROR_APP_STARTING">"Ошибка при запуске приложения "</string>
 </resources>
