--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -180,5 +180,7 @@
     <string name="SECCUses">Successful</string>
     <string name="settings_logger_clearing_request_title">Logs clearing request</string>
     <string name="settings_logger_clearing_request_message">6</string>
-    <string name="ERROR_APP_STARTING">"Ошибка при запуске приложения "</string>
+    <string name="_WELCOME_TITLE">Help me</string>
+    <string name="_WELCOME_MESSAGE">Please help me with the development of the application, write me any bugs that you found in the application, together we will make the application!\n\nWrite to me! Go to the \'About\' tab Select https://fazziclay.github.io/ and choose any convenient way to contact me.\nTelegram: t.me/fazziclay</string>
+    <string name="ERROR_APP_STARTING">Error when launching the application</string>
 </resources>
